# amina-study

./: .gitignore  .gitmodules  Cargo.toml  config.toml  erc20_abi.json  makefile  readme.md
src/: abi_decoder.rs  app_context.rs  args.rs  config.rs  main.rs  tx_recorder.rs
