[package]
name = "amina-study"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
foundry-common = { git = "https://github.com/foundry-rs/foundry" }
alloy-primitives = "0.6.2"
alloy-json-abi = "0.6.2"
ethers-core = "2.0.13"
ethers-providers = "2.0.13"
ethers-signers = "2.0.13"
ethers = "2.0.13"
tokio = "1.35.1"
errors = "0.0.0"
eyre = "0.6.11"