[package]
name = "amina-study"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.28.2", features = ["full"] }
errors = "0.0.0"
eyre = "0.6.11"
ethers = "2.0.13"
serde_json = "1.0.113"